--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,7 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+    backdrop-filter: "blur(10px)"
   }
   a:hover {
     color: #747bff;
